--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="myApp" ng-controller="HomeCtrl">
   <head>
     <meta charset="utf-8">
-    <title>NodeJS Against Humanity</title>
+    <title>Cards Against Humanity</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Le styles -->
     <link href="/public/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">NodeJS Against Humanity</a>
+      <a class="navbar-brand" href="/">Cards Against Humanity</a>
     </div>
     <div class="navbar-collapse collapse" id="humanity-navbar-collapse">
       <ul class="nav navbar-nav">
